hosting on github pages setup 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://karimmasri-0.github.io/artathtetics",
+  "homepage": "https://karimmasri-0.github.io/ArtAthtetics",
   "name": "new_app",
   "version": "0.1.0",
   "private": true,
