--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://karimmasri-0.github.io/ArtAthtetics",
-  "name": "new_app",
+  "homepage": "https://karimmasri-0.github.io/ArtAesthetics",
+  "name": "Art Aesthetics",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
